# presetify

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/presetify/: __init__.py  app.py  cli.py  fetcher.py  metadata.py  models.py  widgets.py  xmp.py
tests/: __init__.py  test_models.py
